[gd_scene load_steps=10 format=2]

[ext_resource path="res://objects/ObjectsElementalCircuits/FulgurSphaera.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ec_fulgur_sphaera.png" type="Texture" id=2]
[ext_resource path="res://test/lighttexture.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 17.2722

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sphaera1/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 7, 6, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sphaera2/sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 7, 6, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sphaera1/lighttexture:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.882353, 0.454902, 0, 0 ), Color( 0.882353, 0.454902, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sphaera2/lighttexture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.882353, 0.454902, 0, 0 ), Color( 0.882353, 0.454902, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sphaera1/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sphaera2/sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sphaera1/lighttexture:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.882353, 0.454902, 0, 1 ), Color( 0.882353, 0.454902, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sphaera2/lighttexture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.882353, 0.454902, 0, 1 ), Color( 0.882353, 0.454902, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sphaera1/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sphaera2/sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[node name="FulgurSphaera" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -8.0
margin_top = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_top = -8.0
margin_right = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerStartMove" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spin = SubResource( 1 )

[node name="TimerEnd" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Sphaera1" type="Area2D" parent="." groups=[
"fulgur_sphaera",
"player_weapon",
]]
position = Vector2( -4, 0 )
collision_layer = 16
collision_mask = 36

[node name="sprite" type="Sprite" parent="Sphaera1"]
texture = ExtResource( 2 )
hframes = 14
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sphaera1"]
shape = SubResource( 2 )

[node name="lighttexture" type="Sprite" parent="Sphaera1"]
modulate = Color( 0.882353, 0.454902, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.34902 )
material = SubResource( 3 )
scale = Vector2( 0.328125, 0.328125 )
z_index = 1
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sphaera2" type="Area2D" parent="." groups=[
"fulgur_sphaera",
"player_weapon",
]]
position = Vector2( 4, 0 )
collision_layer = 16
collision_mask = 100

[node name="sprite" type="Sprite" parent="Sphaera2"]
texture = ExtResource( 2 )
hframes = 14
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sphaera2"]
shape = SubResource( 2 )

[node name="lighttexture" type="Sprite" parent="Sphaera2"]
modulate = Color( 0.882353, 0.454902, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.34902 )
material = SubResource( 3 )
position = Vector2( 4, 0 )
scale = Vector2( 0.328125, 0.328125 )
z_index = 1
texture = ExtResource( 3 )

[node name="AnimSprites" type="AnimationPlayer" parent="."]
anims/create = SubResource( 4 )
anims/destroy = SubResource( 5 )
anims/idle = SubResource( 6 )

[connection signal="timeout" from="TimerEnd" to="." method="_on_TimerEnd_timeout"]
[connection signal="area_entered" from="Sphaera1" to="." method="_on_Sphaera_area_entered" binds= [ "Sphaera1" ]]
[connection signal="body_entered" from="Sphaera1" to="." method="_on_Sphaera_area_entered" binds= [ "Sphaera1" ]]
[connection signal="area_entered" from="Sphaera2" to="." method="_on_Sphaera_area_entered" binds= [ "Sphaera2" ]]
[connection signal="body_entered" from="Sphaera2" to="." method="_on_Sphaera_area_entered" binds= [ "Sphaera2" ]]
[connection signal="animation_finished" from="AnimSprites" to="." method="_on_AnimSprites_animation_finished"]
